--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "date-fns": "^2.28.0",
+    "dotenv": "^14.2.0",
+    "framer-motion": "^5.6.0",
+    "idb-keyval": "^6.1.0",
+    "mysql-query-placeholders": "^0.2.2",
+    "named-placeholders": "^1.1.2",
     "next": "12.0.8",
+    "next-auth": "^4.1.2",
+    "next-superjson": "^0.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "serverless-mysql": "^1.5.4",
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
