--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mantine/core": "^3.6.3",
+    "@mantine/dates": "^3.6.3",
+    "@mantine/hooks": "^3.6.3",
+    "@mantine/modals": "^3.6.3",
+    "@mantine/next": "^3.6.3",
+    "@mantine/notifications": "^3.6.3",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^14.2.0",
     "framer-motion": "^5.6.0",
     "idb-keyval": "^6.1.0",
