--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "framer-motion": "^5.6.0",
@@ -22,6 +25,7 @@
     "next-superjson": "^0.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-icons": "^4.3.1",
     "serverless-mysql": "^1.5.4",
     "superjson": "^1.8.0"
