--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "framer-motion": "^5.6.0",
@@ -27,8 +28,11 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "serverless-mysql": "^1.5.4",
-    "superjson": "^1.8.0"
+    "superjson": "^1.8.0",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
