--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "chakra-react-select": "^3.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "framer-motion": "^5.6.0",
