--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "next-auth": "^4.1.2",
     "next-superjson": "^0.0.2",
     "react": "17.0.2",
+    "react-big-calendar": "^0.38.7",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.25.3",
+    "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/react-big-calendar": "^0.36.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
