--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "bcrypt": "^5.0.1",
     "chakra-react-select": "^3.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
@@ -37,6 +38,7 @@
     "swr": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/react-big-calendar": "^0.36.2",
