--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react": "17.0.2",
     "react-big-calendar": "^0.38.7",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.1",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "read-excel-file": "^5.2.26",
     "redux": "^4.1.2",
     "serverless-mysql": "^1.5.4",
     "superjson": "^1.8.0",
