--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "named-placeholders": "^1.1.2",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
+    "next-pwa": "^5.4.4",
     "next-superjson": "^0.0.2",
     "react": "17.0.2",
     "react-big-calendar": "^0.38.7",
