--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,26 +7,31 @@
     "name": "SAF Parade State Generator",
     "short_name": "35SCE Parade State ",
     "description": "Automated generation of Parade States in custom formats. Supports off/leave/attendC/MA/course/others/status tracking",
+    "id": "/",
     "icons": [
         {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
+          "src": "/pwa/icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any"
         },
         {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
+          "src": "/pwa/icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "maskable"
         },
         {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
+          "src": "/pwa/icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any"
         },
         {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+          "src": "/pwa/icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "maskable"
         }
-    ]
+      ]
 }
