--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-swipeable": "^6.2.0",
     "read-excel-file": "^5.2.26",
     "redux": "^4.1.2",
     "serverless-mysql": "^1.5.4",
