--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "idb-keyval": "^6.1.0",
     "mysql-query-placeholders": "^0.2.2",
     "named-placeholders": "^1.1.2",
+    "net": "^1.0.2",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
     "next-pwa": "^5.4.4",
     "next-superjson": "^0.0.2",
     "react": "17.0.2",
     "react-big-calendar": "^0.38.7",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.1",
     "react-hook-form": "^7.26.0",
