--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "bcrypt": "^5.0.1",
     "chakra-react-select": "^3.0.3",
+    "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "dotenv": "^14.2.0",
     "framer-motion": "^5.6.0",
