--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000",
+    "prod": "next start -p 8085",
     "lint": "next lint"
   },
   "dependencies": {
